[gd_scene load_steps=65 format=2]

[ext_resource path="res://assets/textures/enemies/cat/Idle (1).png" type="Texture" id=1]
[ext_resource path="res://entities/enemies/Cat.gd" type="Script" id=2]
[ext_resource path="res://entities/enemies/CatProjectile.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/enemies/DetectionArea.gd" type="Script" id=4]
[ext_resource path="res://assets/textures/green_circle.png" type="Texture" id=5]
[ext_resource path="res://assets/textures/enemies/cat/Idle (10).png" type="Texture" id=6]
[ext_resource path="res://assets/textures/enemies/cat/Idle (7).png" type="Texture" id=7]
[ext_resource path="res://assets/textures/enemies/cat/Idle (8).png" type="Texture" id=8]
[ext_resource path="res://assets/textures/enemies/cat/Idle (9).png" type="Texture" id=9]
[ext_resource path="res://assets/textures/enemies/cat/Idle (2).png" type="Texture" id=10]
[ext_resource path="res://assets/textures/enemies/cat/Idle (4).png" type="Texture" id=11]
[ext_resource path="res://assets/textures/enemies/cat/Idle (5).png" type="Texture" id=12]
[ext_resource path="res://assets/textures/enemies/cat/Idle (3).png" type="Texture" id=13]
[ext_resource path="res://assets/textures/enemies/cat/Idle (6).png" type="Texture" id=14]
[ext_resource path="res://assets/textures/enemies/cat/Jump (5).png" type="Texture" id=15]
[ext_resource path="res://assets/textures/enemies/cat/Jump (3).png" type="Texture" id=16]
[ext_resource path="res://assets/textures/enemies/cat/Jump (8).png" type="Texture" id=17]
[ext_resource path="res://assets/textures/enemies/cat/Jump (7).png" type="Texture" id=18]
[ext_resource path="res://assets/textures/enemies/cat/Jump (2).png" type="Texture" id=19]
[ext_resource path="res://assets/textures/enemies/cat/Jump (4).png" type="Texture" id=20]
[ext_resource path="res://assets/textures/enemies/cat/Jump (6).png" type="Texture" id=21]
[ext_resource path="res://assets/textures/enemies/cat/Jump (1).png" type="Texture" id=22]
[ext_resource path="res://assets/textures/enemies/cat/Dead (8).png" type="Texture" id=23]
[ext_resource path="res://assets/textures/enemies/cat/Dead (4).png" type="Texture" id=24]
[ext_resource path="res://assets/textures/enemies/cat/Dead (7).png" type="Texture" id=25]
[ext_resource path="res://assets/textures/enemies/cat/Dead (9).png" type="Texture" id=26]
[ext_resource path="res://assets/textures/enemies/cat/Dead (6).png" type="Texture" id=27]
[ext_resource path="res://assets/textures/enemies/cat/Dead (5).png" type="Texture" id=28]
[ext_resource path="res://assets/textures/enemies/cat/Dead (10).png" type="Texture" id=29]
[ext_resource path="res://assets/textures/enemies/cat/Dead (1).png" type="Texture" id=30]
[ext_resource path="res://assets/textures/enemies/cat/Dead (3).png" type="Texture" id=31]
[ext_resource path="res://assets/textures/enemies/cat/Dead (2).png" type="Texture" id=32]
[ext_resource path="res://entities/enemies/states/CatStateMachine.gd" type="Script" id=33]
[ext_resource path="res://entities/enemies/states/Idle.gd" type="Script" id=34]
[ext_resource path="res://entities/enemies/states/Patrol.gd" type="Script" id=35]
[ext_resource path="res://assets/textures/enemies/cat/Walk (1).png" type="Texture" id=36]
[ext_resource path="res://entities/enemies/states/Shoot.gd" type="Script" id=37]
[ext_resource path="res://entities/enemies/states/Dead.gd" type="Script" id=38]
[ext_resource path="res://assets/textures/enemies/cat/Walk (2).png" type="Texture" id=39]
[ext_resource path="res://assets/textures/enemies/cat/Walk (3).png" type="Texture" id=40]
[ext_resource path="res://assets/textures/enemies/cat/Walk (4).png" type="Texture" id=41]
[ext_resource path="res://assets/textures/enemies/cat/Walk (5).png" type="Texture" id=42]
[ext_resource path="res://assets/textures/enemies/cat/Walk (6).png" type="Texture" id=43]
[ext_resource path="res://assets/textures/enemies/cat/Walk (7).png" type="Texture" id=44]
[ext_resource path="res://assets/textures/enemies/cat/Walk (8).png" type="Texture" id=45]
[ext_resource path="res://assets/textures/enemies/cat/Walk (9).png" type="Texture" id=46]
[ext_resource path="res://assets/textures/enemies/cat/Walk (10).png" type="Texture" id=47]
[ext_resource path="res://Audio/Sfx/angryCat.ogg" type="AudioStream" id=48]
[ext_resource path="res://assets/textures/enemies/cat/Hurt (10).png" type="Texture" id=49]
[ext_resource path="res://assets/textures/enemies/cat/Hurt (4).png" type="Texture" id=50]
[ext_resource path="res://assets/textures/enemies/cat/Hurt (1).png" type="Texture" id=51]
[ext_resource path="res://assets/textures/enemies/cat/Hurt (3).png" type="Texture" id=52]
[ext_resource path="res://assets/textures/enemies/cat/Hurt (6).png" type="Texture" id=53]
[ext_resource path="res://assets/textures/enemies/cat/Hurt (2).png" type="Texture" id=54]
[ext_resource path="res://assets/textures/enemies/cat/Hurt (9).png" type="Texture" id=55]
[ext_resource path="res://assets/textures/enemies/cat/Hurt (8).png" type="Texture" id=56]
[ext_resource path="res://assets/textures/enemies/cat/Hurt (7).png" type="Texture" id=57]
[ext_resource path="res://assets/textures/enemies/cat/Hurt (5).png" type="Texture" id=58]
[ext_resource path="res://Audio/Sfx/catAttack.ogg" type="AudioStream" id=59]
[ext_resource path="res://Audio/Sfx/catDead.wav" type="AudioStream" id=60]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 24.0
}, {
"frames": [ ExtResource( 51 ), ExtResource( 54 ), ExtResource( 52 ), ExtResource( 50 ), ExtResource( 58 ), ExtResource( 53 ), ExtResource( 57 ), ExtResource( 56 ), ExtResource( 55 ), ExtResource( 49 ) ],
"loop": false,
"name": "hit",
"speed": 30.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 32 ), ExtResource( 31 ), ExtResource( 24 ), ExtResource( 28 ), ExtResource( 27 ), ExtResource( 25 ), ExtResource( 23 ), ExtResource( 26 ), ExtResource( 29 ) ],
"loop": false,
"name": "dead",
"speed": 24.0
}, {
"frames": [ ExtResource( 36 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ) ],
"loop": true,
"name": "walk",
"speed": 24.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 19 ), ExtResource( 16 ), ExtResource( 20 ), ExtResource( 15 ), ExtResource( 21 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 1 ) ],
"loop": false,
"name": "shoot",
"speed": 24.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15.5511, 47.422 )

[sub_resource type="CircleShape2D" id=3]
radius = 328.39

[sub_resource type="Animation" id=4]
resource_name = "remove"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Body:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.266352, 0.288347 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 4.33561, -14.8775 ), Vector2( 4.33561, 46.1225 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_remove"
} ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("Dead")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 60 )
} ],
"times": PoolRealArray( 0 )
}

[node name="Cat" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource( 2 )
projectile_scene = ExtResource( 3 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 33 )

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 34 )
animation_name = "idle"

[node name="BoredomTimer" type="Timer" parent="StateMachine/Idle"]
one_shot = true

[node name="Shoot" type="Node" parent="StateMachine"]
script = ExtResource( 37 )
animation_name = "shoot"
shoot_sfx_path = NodePath("../../Shoot")
growl_sfx_path = NodePath("../../Growl")

[node name="FireCooldown" type="Timer" parent="StateMachine/Shoot"]
one_shot = true

[node name="Patrol" type="Node" parent="StateMachine"]
script = ExtResource( 35 )
animation_name = "walk"
wander_radius = Vector2( 500, 0 )
minimum_wander_distance = 96.0
speed = 5.0
max_h_speed = 60.0

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource( 38 )
animation_name = "dead"

[node name="FirePosition" type="Position2D" parent="."]
position = Vector2( 9.6885, -4.9261 )

[node name="RayCast2D" type="RayCast2D" parent="FirePosition"]
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 3

[node name="Body" type="AnimatedSprite" parent="."]
position = Vector2( 4.33561, -14.8775 )
scale = Vector2( 0.266352, 0.288347 )
frames = SubResource( 1 )
animation = "hit"
frame = 9
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.247452, 0.0067749 )
shape = SubResource( 2 )

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource( 4 )

[node name="green_circle" type="Sprite" parent="DetectionArea"]
modulate = Color( 1, 1, 1, 0.301961 )
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 3 )

[node name="RemoveAnimPlayer" type="AnimationPlayer" parent="."]
anims/remove = SubResource( 4 )

[node name="Dead" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 60 )
bus = "Sorround"

[node name="Growl" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 59 )
bus = "Sorround"

[node name="Shoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 48 )
bus = "Sorround"

[connection signal="timeout" from="StateMachine/Idle/BoredomTimer" to="StateMachine/Idle" method="_on_BoredomTimer_timeout"]
[connection signal="timeout" from="StateMachine/Shoot/FireCooldown" to="StateMachine/Shoot" method="_on_FireCooldown_timeout"]
[connection signal="animation_finished" from="Body" to="." method="_on_Body_animation_finished"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
[connection signal="finished" from="Shoot" to="StateMachine/Shoot" method="_on_Shoot_finished"]
